Add a `runtime` field to the contract types
Allow accessing the contract runtime from the contracts.

--- a/linera-service/template/contract.rs.template
+++ b/linera-service/template/contract.rs.template
@@ -12,6 +12,7 @@ use thiserror::Error;
 
 pub struct ApplicationContract {{
     state: Application,
+    _runtime: ContractRuntime,
 }}
 
 linera_sdk::contract!(ApplicationContract);
@@ -26,8 +27,11 @@ impl Contract for ApplicationContract {{
     type Storage = ViewStateStorage<Self>;
     type State = Application;
 
-    async fn new(state: Self::State) -> Result<Self, Self::Error> {{
-        Ok(ApplicationContract {{ state }})
+    async fn new(state: Self::State, runtime: ContractRuntime) -> Result<Self, Self::Error> {{
+        Ok(ApplicationContract {{
+            state,
+            _runtime: runtime,
+        }})
     }}
 
     fn state_mut(&mut self) -> &mut Self::State {{
