Introduce the unlimited in order to hopefully make the tests pass.

--- a/.github/workflows/dynamodb.yml
+++ b/.github/workflows/dynamodb.yml
@@ -60,4 +60,5 @@ jobs:
         AWS_SECRET_ACCESS_KEY: test
         LOCALSTACK_ENDPOINT: http://localhost:8000
       run: |
+        ulimit -s unlimited
         cargo test --locked --features aws -- dynamo
