Created scaffolding for LLM example app

--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "counter",
     "crowd-funding",
     "fungible",
+    "llm",
     "matching-engine",
     "meta-counter",
     "native-fungible",
