--- a/examples/llm/Cargo.toml
+++ b/examples/llm/Cargo.toml
@@ -8,13 +8,15 @@ async-graphql.workspace = true
 async-trait.workspace = true
 bcs.workspace = true
 candle-core = "0.4.1"
+candle-transformers = "0.4.1"
+fs-err = "2.11.0"
 getrandom = { version = "0.2.12", features = ["custom"] }
+log = "0.4.21"
 linera-sdk.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
-log = "0.4.21"
-fs-err = "2.11.0"
+tokenizers = { version = "0.15.0", default-features = false, features = ["unstable_wasm"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 linera-sdk = { workspace = true, features = ["test", "wasmer"] }
