Some insertion of code for the extraction of keys.

--- a/linera-storage-service/Cargo.toml
+++ b/linera-storage-service/Cargo.toml
@@ -32,6 +32,7 @@ linera-version.workspace = true
 linera-views.workspace = true
 port-selector.workspace = true
 prost.workspace = true
+serde.workspace = true
 thiserror.workspace = true
 tokio = { workspace = true, features = ["full"] }
 tonic = { workspace = true, features = ["codegen", "prost", "transport"] }
