--- a/examples/llm/Cargo.toml
+++ b/examples/llm/Cargo.toml
@@ -10,13 +10,14 @@ bcs.workspace = true
 candle-core = "0.4.1"
 candle-transformers = "0.4.1"
 fs-err = "2.11.0"
-getrandom = { version = "0.2.12", features = ["custom"] }
-log = "0.4.21"
+getrandom = { version = "0.2.12", default-features = false, features = ["custom"] }
 linera-sdk.workspace = true
+log = "0.4.21"
+rand = "0.8.5"
 serde.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
-tokenizers = { version = "0.15.0", default-features = false, features = ["unstable_wasm"] }
+tokenizers = { git = "https://github.com/christos-h/tokenizers", default-features = false, features = ["unstable_wasm"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 linera-sdk = { workspace = true, features = ["test", "wasmer"] }
