--- a/linera-service/template/contract.rs.template
+++ b/linera-service/template/contract.rs.template
@@ -5,8 +5,7 @@ mod state;
 use self::state::Application;
 use async_trait::async_trait;
 use linera_sdk::{{
-    base::{{SessionId, WithContractAbi}},
-    ApplicationCallOutcome, Contract, ContractRuntime, ExecutionOutcome, SessionCallOutcome,
+    base::WithContractAbi, ApplicationCallOutcome, Contract, ContractRuntime, ExecutionOutcome,
     ViewStateStorage,
 }};
 use thiserror::Error;
@@ -50,21 +49,8 @@ impl Contract for Application {{
         &mut self,
         _runtime: &mut ContractRuntime,
         _call: Self::ApplicationCall,
-        _forwarded_sessions: Vec<SessionId>,
-    ) -> Result<ApplicationCallOutcome<Self::Message, Self::Response, Self::SessionState>, Self::Error>
-    {{
+    ) -> Result<ApplicationCallOutcome<Self::Message, Self::Response>, Self::Error> {{
         Ok(ApplicationCallOutcome::default())
-    }}
-
-    async fn handle_session_call(
-        &mut self,
-        _runtime: &mut ContractRuntime,
-        _session: Self::SessionState,
-        _call: Self::SessionCall,
-        _forwarded_sessions: Vec<SessionId>,
-    ) -> Result<SessionCallOutcome<Self::Message, Self::Response, Self::SessionState>, Self::Error>
-    {{
-        Ok(SessionCallOutcome::default())
     }}
 }}
 
