--- a/linera-service/template/service.rs.template
+++ b/linera-service/template/service.rs.template
@@ -5,22 +5,32 @@ mod state;
 use self::state::Application;
 use async_trait::async_trait;
 use linera_sdk::{{base::WithServiceAbi, Service, ServiceRuntime, ViewStateStorage}};
-use std::sync::Arc;
 use thiserror::Error;
 
-linera_sdk::service!(Application);
+pub struct ApplicationService {{
+    _state: Application,
+}}
 
-impl WithServiceAbi for Application {{
+linera_sdk::service!(ApplicationService);
+
+impl WithServiceAbi for ApplicationService {{
     type Abi = {project_name}::ApplicationAbi;
 }}
 
 #[async_trait]
-impl Service for Application {{
+impl Service for ApplicationService {{
     type Error = ServiceError;
     type Storage = ViewStateStorage<Self>;
+    type State = Application;
+
+    async fn new(state: Self::State) -> Result<Self, Self::Error> {{
+        Ok(ApplicationService {{
+            _state: state,
+        }})
+    }}
 
     async fn handle_query(
-        self: Arc<Self>,
+        &self,
         _runtime: &ServiceRuntime,
         _query: Self::Query,
     ) -> Result<(), Self::Error> {{
