Remove `runtime` parameter from `handle_query`
The type can be obtained with a default constructor and should be stored
in the service type instead.

--- a/linera-service/template/service.rs.template
+++ b/linera-service/template/service.rs.template
@@ -29,11 +29,7 @@ impl Service for ApplicationService {{
         }})
     }}
 
-    async fn handle_query(
-        &self,
-        _runtime: &ServiceRuntime,
-        _query: Self::Query,
-    ) -> Result<(), Self::Error> {{
+    async fn handle_query(&self, _query: Self::Query) -> Result<(), Self::Error> {{
         Err(ServiceError::QueriesNotSupported)
     }}
 }}
