--- a/Cargo.toml
+++ b/Cargo.toml
@@ -115,6 +115,7 @@ thiserror = "1.0.57"
 tonic = { version = "0.11", default-features = false }
 tonic-build = { version = "0.11", default-features = false }
 tonic-health = "0.11"
+tonic-reflection = "0.11"
 tonic-web = "0.11"
 tokio = "1.36.0"
 tokio-stream = "0.1.14"
