--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -80,6 +80,7 @@ tokio-stream.workspace = true
 toml.workspace = true
 tonic = { workspace = true, features = ["transport", "tls", "tls-roots"] }
 tonic-health.workspace = true
+tonic-reflection.workspace = true
 tonic-web.workspace = true
 tower.workspace = true
 tower-http = { workspace = true, features = ["cors"] }
