--- a/examples/native-fungible/Cargo.toml
+++ b/examples/native-fungible/Cargo.toml
@@ -13,6 +13,7 @@ async-trait.workspace = true
 bcs.workspace = true
 fungible.workspace = true
 linera-sdk.workspace = true
+serde.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
 
