Including native-fungible and non-fungible READMEs into the readme test

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -164,7 +164,7 @@ jobs:
       run: |
         (set -e; for I in linera-*; do if [ -d "$I" ]; then echo $I; cargo rdme --check --no-fail-on-warnings -w $I; fi; done)
         cd examples
-        (set -e; for I in fungible native-fungible social crowd-funding amm counter meta-counter matching-engine; do echo $I; cargo rdme --check --no-fail-on-warnings -w $I; done)
+        (set -e; for I in fungible native-fungible non-fungible social crowd-funding amm counter meta-counter matching-engine; do echo $I; cargo rdme --check --no-fail-on-warnings -w $I; done)
     - name: Run Wasm application lints
       run: |
         cd examples
