Create separate contract and service types with the runtime instance (#1778)
* Refactor SDK Wasm view tests

Test the view APIs only once, because it is shared between the contract
and the service.

* Don't use `system_api` in `ContractStateStorage`

Remove the related system APIs, because they aren't really needed.

* Create separate types for contracts

Keep the state as a separate type from the contract type, and require
methods in `Contract` to create the contract type from the state and to
return the state.

* Add a `runtime` field to the contract types

Allow accessing the contract runtime from the contracts.

* Remove `runtime` parameter from `Contract` methods

The type can be obtained with a default constructor and should be stored
in the contract type instead.

* Restrict how `ContractRuntime` is constructed

Ensure it is only created inside `linera-sdk`.

* Don't use `system_api` in `ServiceStateStorage`

Remove the related system APIs, because they aren't really needed.

* Create separate types for services

Keep the state as a separate type from the service type, and require a
method in `Service` to create the service hnadler type from the state.

* Remove `async_trait` from `Service` trait

The service runs in a single thread, so there's no need for its methods
to be `Send` or `Sync`.

* Add a `runtime` parameter to `Service::new`

Allow accessing the service runtime from the service implementations.

* Remove `runtime` parameter from `handle_query`

The type can be obtained with a default constructor and should be stored
in the service type instead.

* Restrict how `ServiceRuntime` is constructed

Ensure it is only created inside `linera-sdk`.

* Update Wasm fuel test fixtures

Rebuild the Wasm binaries to use the updated SDK and update the expected
fuel consumption values.

* Refactor `check_account_authentication` methods

Simplify their signatures to have less parameters.

* Allow new 

--- a/linera-service/template/contract.rs.template
+++ b/linera-service/template/contract.rs.template
@@ -10,20 +10,33 @@ use linera_sdk::{{
 }};
 use thiserror::Error;
 
-linera_sdk::contract!(Application);
+pub struct ApplicationContract {{
+    state: Application,
+    runtime: ContractRuntime,
+}}
 
-impl WithContractAbi for Application {{
+linera_sdk::contract!(ApplicationContract);
+
+impl WithContractAbi for ApplicationContract {{
     type Abi = {project_name}::ApplicationAbi;
 }}
 
 #[async_trait]
-impl Contract for Application {{
+impl Contract for ApplicationContract {{
     type Error = ContractError;
     type Storage = ViewStateStorage<Self>;
+    type State = Application;
+
+    async fn new(state: Self::State, runtime: ContractRuntime) -> Result<Self, Self::Error> {{
+        Ok(ApplicationContract {{ state, runtime }})
+    }}
+
+    fn state_mut(&mut self) -> &mut Self::State {{
+        &mut self.state
+    }}
 
     async fn initialize(
         &mut self,
-        _runtime: &mut ContractRuntime,
         _argument: Self::InitializationArgument,
     ) -> Result<ExecutionOutcome<Self::Message>, Self::Error> {{
         Ok(ExecutionOutcome::default())
@@ -31,7 +44,6 @@ impl Contract for Application {{
 
     async fn execute_operation(
         &mut self,
-        _runtime: &mut ContractRuntime,
         _operation: Self::Operation,
     ) -> Result<ExecutionOutcome<Self::Message>, Self::Error> {{
         Ok(ExecutionOutcome::default())
@@ -39,7 +51,6 @@ impl Contract for Application {{
 
     async fn execute_message(
         &mut self,
-        _runtime: &mut ContractRuntime,
         _message: Self::Message,
     ) -> Result<ExecutionOutcome<Self::Message>, Self::Error> {{
         Ok(ExecutionOutcome::default())
@@ -47,7 +58,6 @@ impl Contract for Application {{
 
     async fn handle_application_call(
         &mut self,
-        _runtime: &mut ContractRuntime,
         _call: Self::ApplicationCall,
     ) -> Result<ApplicationCallOutcome<Self::Message, Self::Response>, Self::Error> {{
         Ok(ApplicationCallOutcome::default())
