Use the with_testing alias everywhere.

--- a/linera-sdk/Cargo.toml
+++ b/linera-sdk/Cargo.toml
@@ -56,5 +56,8 @@ tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 wasmtime.workspace = true
 wit-bindgen-host-wasmtime-rust.workspace = true
 
+[build-dependencies]
+cfg_aliases.workspace = true
+
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 tokio-test.workspace = true
