--- a/linera-core/Cargo.toml
+++ b/linera-core/Cargo.toml
@@ -76,6 +76,9 @@ tracing.workspace = true
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 linera-storage-service.workspace = true
 
+[build-dependencies]
+cfg_aliases.workspace = true
+
 [dev-dependencies]
 assert_matches.workspace = true
 counter.workspace = true
