Use `ContractRuntime` in SDK Wasm tests
Run the tests with the new high-level API endpoints.

--- a/linera-sdk/wasm-tests/Cargo.toml
+++ b/linera-sdk/wasm-tests/Cargo.toml
@@ -12,4 +12,5 @@ linera-sdk = { workspace = true, features = ["test"] }
 linera-views.workspace = true
 log.workspace = true
 serde_json.workspace = true
+thiserror.workspace = true
 webassembly-test.workspace = true
