Move `OutgoingMessage` type to `linera-base`
Allow the type to be accessed from `linera-execution` as well as from
user applications.

--- a/linera-sdk/Cargo.toml
+++ b/linera-sdk/Cargo.toml
@@ -24,7 +24,7 @@ wasmtime = [
     "linera-execution/wasmtime",
     "linera-storage/wasmtime",
 ]
-test = []
+test = ["linera-base/test"]
 
 [dependencies]
 async-graphql.workspace = true
