--- a/linera-rpc/Cargo.toml
+++ b/linera-rpc/Cargo.toml
@@ -45,6 +45,7 @@ anyhow.workspace = true
 async-trait.workspace = true
 bincode.workspace = true
 bytes.workspace = true
+cfg-if.workspace = true
 clap.workspace = true
 dashmap.workspace = true
 ed25519-dalek.workspace = true
