--- a/.github/workflows/kubernetes.yml
+++ b/.github/workflows/kubernetes.yml
@@ -12,6 +12,9 @@ on:
       - 'configuration/**'
       - 'docker/**'
       - 'kubernetes/**'
+      - 'linera-service/src/grpc_proxy.rs'
+      - 'linera-rpc/src/grpc/server.rs'
+      - 'linera-rpc/src/grpc_network.rs'
   workflow_dispatch:
 
 # This allows a subsequently queued workflow run to interrupt previous runs on pull-requests
@@ -46,7 +49,7 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Build client binary
         run: |
-          cargo build --release --locked --bin linera --bin linera-proxy --bin linera-server --bin linera-db --features scylladb,rocksdb,kubernetes
+          cargo build --release --locked --bin linera --bin linera-proxy --bin linera-server --bin linera-db --features scylladb,rocksdb,kubernetes,metrics
           strip target/release/linera
           strip target/release/linera-proxy
           strip target/release/linera-server
