--- a/Cargo.toml
+++ b/Cargo.toml
@@ -133,7 +133,7 @@ trait-variant = "0.1.1"
 wasm-bindgen = "0.2.92"
 wasm-bindgen-test = "0.3.42"
 wasm-encoder = "0.24.1"
-wasmer = { version = "=3.1.1", features = ["singlepass"] }
+wasmer = { version = "=3.1.1", features = ["cranelift", "singlepass"] }
 wasmer-middlewares = "=3.1.1"
 wasmer-vm = { version = "=3.1.1" }
 wasmparser = "0.101.1"
