--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -29,6 +29,7 @@ scylladb = [
 ]
 kubernetes = ["dep:k8s-openapi", "dep:kube", "dep:pathdiff", "dep:fs_extra"]
 remote_net = ["dep:k8s-openapi", "dep:kube"]
+metrics = ["prometheus", "linera-base/metrics"]
 
 [dependencies]
 anyhow.workspace = true
@@ -67,7 +68,7 @@ linera-version.workspace = true
 linera-views = { workspace = true, features = ["metrics"] }
 pathdiff = { workspace = true, optional = true }
 port-selector = { workspace = true, optional = true }
-prometheus.workspace = true
+prometheus = { workspace = true, optional = true }
 rand.workspace = true
 rcgen.workspace = true
 reqwest = { workspace = true, features = ["json"] }
