Make sure we have metrics enabled in our Docker images

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -60,7 +60,7 @@ RUN cargo build --release \
     --bin linera-proxy \
     --bin linera-server \
     --bin linera-db \
-    --features scylladb
+    --features scylladb,metrics
 
 RUN mv \
     target/"$target"/release/linera \
