--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,7 +60,6 @@ custom_debug_derive = "0.6.1"
 dashmap = "5.5.3"
 derive_more = "0.99.17"
 dirs = "5.0.1"
-ed25519 = "2.2"
 ed25519-dalek = { version = "2.1.1", features = ["batch", "serde"] }
 either = "1.10.0"
 frunk = "0.4.2"
@@ -117,6 +116,7 @@ tonic-build = { version = "0.11", default-features = false }
 tonic-health = "0.11"
 tonic-reflection = "0.11"
 tonic-web = "0.11"
+tonic-web-wasm-client = "0.5.1"
 tokio = "1.36.0"
 tokio-stream = "0.1.14"
 tokio-test = "0.4.3"
@@ -126,6 +126,8 @@ tower-http = "0.5.2"
 tower = "0.4.13"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", default-features = false, features = ["env-filter"] }
+trait-variant = "0.1.1"
+wasm-bindgen-test = "0.3.42"
 wasm-encoder = "0.24.1"
 wasmer = { version = "=3.1.1", features = ["singlepass"] }
 wasmer-middlewares = "=3.1.1"
@@ -142,7 +144,6 @@ linera-chain = { version = "0.9.0", path = "./linera-chain" }
 linera-core = { version = "0.9.0", path = "./linera-core", default-features = false }
 linera-execution = { version = "0.9.0", path = "./linera-execution", default-features = false }
 linera-indexer = { path = "./linera-indexer/lib" }
-linera-indexer-example = { path = "./linera-indexer/example" }
 linera-indexer-graphql-client = { path = "./linera-indexer/graphql-client" }
 linera-indexer-plugins = { path = "./linera-indexer/plugins" }
 linera-rpc = { version = "0.9.0", path = "./linera-rpc" }
