Simplify application return types
Remove the `ExecutionOutcome` and `ApplicationCallOutcome` values from
the returned result.

--- a/linera-service/template/contract.rs.template
+++ b/linera-service/template/contract.rs.template
@@ -2,13 +2,11 @@
 
 mod state;
 
-use self::state::Application;
 use async_trait::async_trait;
-use linera_sdk::{{
-    base::WithContractAbi, ApplicationCallOutcome, Contract, ContractRuntime, ExecutionOutcome,
-    ViewStateStorage,
-}};
+use linera_sdk::{{base::WithContractAbi, Contract, ContractRuntime, ViewStateStorage}};
 use thiserror::Error;
+
+use self::state::Application;
 
 pub struct ApplicationContract {{
     state: Application,
@@ -38,29 +36,23 @@ impl Contract for ApplicationContract {{
     async fn initialize(
         &mut self,
         _argument: Self::InitializationArgument,
-    ) -> Result<ExecutionOutcome<Self::Message>, Self::Error> {{
-        Ok(ExecutionOutcome::default())
+    ) -> Result<(), Self::Error> {{
+        Ok(())
     }}
 
-    async fn execute_operation(
-        &mut self,
-        _operation: Self::Operation,
-    ) -> Result<ExecutionOutcome<Self::Message>, Self::Error> {{
-        Ok(ExecutionOutcome::default())
+    async fn execute_operation(&mut self, _operation: Self::Operation) -> Result<(), Self::Error> {{
+        Ok(())
     }}
 
-    async fn execute_message(
-        &mut self,
-        _message: Self::Message,
-    ) -> Result<ExecutionOutcome<Self::Message>, Self::Error> {{
-        Ok(ExecutionOutcome::default())
+    async fn execute_message(&mut self, _message: Self::Message) -> Result<(), Self::Error> {{
+        Ok(())
     }}
 
     async fn handle_application_call(
         &mut self,
         _call: Self::ApplicationCall,
-    ) -> Result<ApplicationCallOutcome<Self::Message, Self::Response>, Self::Error> {{
-        Ok(ApplicationCallOutcome::default())
+    ) -> Result<Self::Response, Self::Error> {{
+        Ok(())
     }}
 }}
 
