Return value from `Contract::execute_operation`
Return the `Abi::Response` from the SDK's `execute_operation` method, in
preparation to merge it with application calls.

--- a/linera-service/template/contract.rs.template
+++ b/linera-service/template/contract.rs.template
@@ -41,7 +41,10 @@ impl Contract for ApplicationContract {{
         Ok(())
     }}
 
-    async fn execute_operation(&mut self, _operation: Self::Operation) -> Result<(), Self::Error> {{
+    async fn execute_operation(
+        &mut self,
+        _operation: Self::Operation,
+    ) -> Result<Self::Response, Self::Error> {{
         Ok(())
     }}
 
