`linera-views`: add local variants of store traits

--- a/linera-views/Cargo.toml
+++ b/linera-views/Cargo.toml
@@ -52,6 +52,7 @@ tempfile.workspace = true
 thiserror.workspace = true
 tokio = { workspace = true, features = ["rt", "sync"] }
 tracing.workspace = true
+trait-variant.workspace = true
 
 [dev-dependencies]
 linera-views = { path = ".", features = ["test"] }
