--- a/linera-core/Cargo.toml
+++ b/linera-core/Cargo.toml
@@ -50,6 +50,7 @@ anyhow = { workspace = true, optional = true }
 async-graphql.workspace = true
 async-trait.workspace = true
 bcs.workspace = true
+clap = { workspace = true, optional = true }
 dashmap.workspace = true
 futures.workspace = true
 linera-base.workspace = true
