Add a `log` feature to `linera-witty`
Prepare to implement the Witty traits for a type from the `log` crate,
but only if requested by the user.

--- a/linera-witty/Cargo.toml
+++ b/linera-witty/Cargo.toml
@@ -12,6 +12,7 @@ edition = "2021"
 
 [features]
 default = ["macros"]
+log = ["dep:log"]
 macros = ["linera-witty-macros"]
 test = ["linera-witty-macros?/test"]
 wasmer = ["dep:wasmer", "linera-witty-macros?/wasmer", "wasmer-vm"]
@@ -22,6 +23,7 @@ anyhow.workspace = true
 either.workspace = true
 frunk.workspace = true
 linera-witty-macros = { workspace = true, optional = true }
+log = { workspace = true, optional = true }
 thiserror.workspace = true
 wasmer = { workspace = true, optional = true }
 wasmer-vm = { workspace = true, optional = true }
