Test WIT roundtrip of `linera-base` types
Ensure all types that will be used in the WIT interface can be loaded
and stored using the WIT specification.

--- a/linera-base/Cargo.toml
+++ b/linera-base/Cargo.toml
@@ -46,6 +46,8 @@ prometheus.workspace = true
 [dev-dependencies]
 custom_debug_derive.workspace = true
 linera-base = { path = ".", features = ["test"] }
+linera-witty = { workspace = true, features = ["test"] }
+test-case.workspace = true
 
 [build-dependencies]
 cfg_aliases.workspace = true
