--- a/linera-execution/Cargo.toml
+++ b/linera-execution/Cargo.toml
@@ -49,6 +49,7 @@ lru.workspace = true
 once_cell.workspace = true
 oneshot.workspace = true
 prometheus = { workspace = true, optional = true }
+reqwest = { workspace = true, features = ["blocking"] }
 serde.workspace = true
 serde_bytes.workspace = true
 serde_json.workspace = true
