Add WIT entrypoints for contracts and services
Place them in a separate module.

--- a/linera-execution/Cargo.toml
+++ b/linera-execution/Cargo.toml
@@ -45,6 +45,7 @@ futures.workspace = true
 linera-base.workspace = true
 linera-views.workspace = true
 linera-views-derive.workspace = true
+linera-witty = { workspace = true, features = ["macros"] }
 lru.workspace = true
 once_cell.workspace = true
 oneshot.workspace = true
