Replace `file-lock` dependency with `fs4`
Create a custom `FileLock` wrapper type using the `fs4::FileExt`
extension trait in order to support non-POSIX operating systems.

--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -48,8 +48,8 @@ colored.workspace = true
 comfy-table.workspace = true
 current_platform = "0.2.0"
 dirs.workspace = true
-file-lock = "2.1.11"
 fs-err.workspace = true
+fs4.workspace = true
 fs_extra = { workspace = true, optional = true }
 futures.workspace = true
 hex.workspace = true
