--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -77,6 +77,9 @@ jobs:
     - name: Compile the workspace with the default features (build)
       run: |
         cargo build --locked
+    - name: Compile Wasm test modules for Witty integration tests
+      run: |
+        cargo build -p linera-witty-test-modules --target wasm32-unknown-unknown
     - name: Run all tests using the default features
       run: |
         cargo test --locked
@@ -107,7 +110,6 @@ jobs:
         cargo test --locked --target x86_64-unknown-linux-gnu
     - name: Run Witty integration tests
       run: |
-        cargo build -p linera-witty-test-modules --target wasm32-unknown-unknown
         cargo test -p linera-witty --features wasmer,wasmtime
     - name: Check for outdated CLI.md
       run: |
