Use Witty to declare the application interfaces (#1907)
* Add WIT entrypoints for contracts and services

Place them in a separate module.

* Add a `linera_witty::RuntimeError::Custom` variant

Allow called host functions to return custom errors.

* Create a `SystemApiData` helper type

A helper type to store the runtime to use for handling the system APIs
and to keep track of active promises.

* Implement the `ContractSystemApi` exports

Create the `ContractSystemApi` with the functions to be exported with
Witty.

* Implement the `ServiceSystemApi` exports

Create the `ServiceSystemApi` with the functions to be exported with
Witty.

* Require `BaseRuntime` promises to be `Sync`

Allow them to be stored in the `SystemApiData` helper type.

* Derive `{WitLoad,WitStore}` for `WriteOperation`

Allow the type to be sent through the WIT interface.

* Implement the `ViewSystemApi` exports

Create the `ViewSystemApi` with the functions to be exported with Witty.

* Temporarily ignore some warnings

They will be solved later when the added code is used.

* Build Witty Wasm test modules sooner in CI

Now that `linera-witty` has been added as a dependency of
`linera-execution`, it seems like the tests now enable the `wasmer`
feature of `linera-witty`. This causes the tests to fail because the
necessary Wasm modules weren't built until later in the pipeline.

This commit moves the compilation of those Wasm modules to before the
tests are executed.

* Add missing period to documentation

Follow the proper convention for writing documentation.

Co-authored-by: Andreas Fackler <afck@users.noreply.github.com>
Signed-off-by: Janito Vaqueiro Ferreira Filho <janito.vff@gmail.com>

---------

Signed-off-by: Janito Vaqueiro Ferreira Filho <janito.vff@gmail.com>
Co-authored-by: Andreas Fackler <afck@users.noreply.github.com>

--- a/linera-execution/Cargo.toml
+++ b/linera-execution/Cargo.toml
@@ -17,6 +17,7 @@ metrics = ["prometheus", "linera-views/metrics"]
 wasmer = [
     "bytes",
     "dep:wasmer",
+    "linera-witty/wasmer",
     "wasm-encoder",
     "wasmer-middlewares",
     "wasmparser",
@@ -24,6 +25,7 @@ wasmer = [
 ]
 wasmtime = [
     "dep:wasmtime",
+    "linera-witty/wasmtime",
     "wasm-encoder",
     "wasmparser",
     "wit-bindgen-host-wasmtime-rust",
@@ -45,6 +47,7 @@ futures.workspace = true
 linera-base.workspace = true
 linera-views.workspace = true
 linera-views-derive.workspace = true
+linera-witty = { workspace = true, features = ["log", "macros"] }
 lru.workspace = true
 once_cell.workspace = true
 oneshot.workspace = true
@@ -54,7 +57,7 @@ serde.workspace = true
 serde_bytes.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
-tracing.workspace = true
+tracing = { workspace = true, features = ["log"] }
 wasm-encoder = { workspace = true, optional = true }
 wasmer = { workspace = true, optional = true }
 wasmer-middlewares = { workspace = true, optional = true }
@@ -76,6 +79,7 @@ bcs.workspace = true
 counter.workspace = true
 linera-base = { workspace = true, features = ["test"] }
 linera-execution = { path = ".", features = ["test"] }
+linera-witty = { workspace = true, features = ["log", "macros", "test"] }
 test-case.workspace = true
 test-log = { workspace = true, features = ["trace"] }
 tokio = { workspace = true, features = ["rt", "test-util"] }
