Generate the contents of a WIT interface file
Create a `WitInterfaceWriter` helper type that returns an iterator to
generate the contents of the file.

--- a/linera-witty/Cargo.toml
+++ b/linera-witty/Cargo.toml
@@ -22,6 +22,7 @@ wasmtime = ["dep:wasmtime", "linera-witty-macros?/wasmtime"]
 anyhow.workspace = true
 either.workspace = true
 frunk.workspace = true
+genawaiter.workspace = true
 linera-witty-macros = { workspace = true, optional = true }
 log = { workspace = true, optional = true }
 thiserror.workspace = true
