--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,7 @@ fs-err = { version = "2.11.0", features = ["tokio"] }
 fs4 = "0.8.2"
 fs_extra = "1.3.0"
 futures = "0.3.30"
+genawaiter = "0.99.1"
 generic-array = { version = "0.14.7", features = ["serde"] }
 getrandom = "0.2.12"
 hex = "0.4.3"
