--- a/linera-witty/Cargo.toml
+++ b/linera-witty/Cargo.toml
@@ -22,6 +22,7 @@ wasmtime = ["dep:wasmtime", "linera-witty-macros?/wasmtime"]
 anyhow.workspace = true
 either.workspace = true
 frunk.workspace = true
+genawaiter.workspace = true
 linera-witty-macros = { workspace = true, optional = true }
 log = { workspace = true, optional = true }
 thiserror.workspace = true
@@ -31,6 +32,7 @@ wasmtime = { workspace = true, optional = true }
 
 [dev-dependencies]
 assert_matches.workspace = true
+insta.workspace = true
 linera-witty = { workspace = true, features = ["macros", "test"] }
 test-case.workspace = true
 tracing.workspace = true
