--- a/linera-sdk/Cargo.toml
+++ b/linera-sdk/Cargo.toml
@@ -51,6 +51,7 @@ linera-chain = { workspace = true, features = ["metrics"] }
 linera-core = { workspace = true, features = ["test", "metrics", "wasmer"] }
 linera-execution = { workspace = true, features = ["fs", "metrics", "wasmer"] }
 linera-storage = { workspace = true, features = ["metrics", "wasmer"] }
+linera-witty = { workspace = true, features = ["test"] }
 serde_json.workspace = true
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 wasmtime.workspace = true
@@ -61,3 +62,7 @@ cfg_aliases.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 tokio-test.workspace = true
+
+[[bin]]
+name = "wit-generator"
+path = "src/bin/wit_generator.rs"
