Renaming get_free_port as get_free_endpoint and change the get_anvil to use a random port.

--- a/linera-ethereum/Cargo.toml
+++ b/linera-ethereum/Cargo.toml
@@ -18,6 +18,7 @@ ethers-core.workspace = true
 ethers-providers.workspace = true
 ethers-middleware.workspace = true
 ethers-signers.workspace = true
+linera-storage-service.workspace = true
 serde.workspace = true
 thiserror.workspace = true
 rustc-hex.workspace = true
