--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -43,6 +43,9 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions-rust-lang/setup-rust-toolchain@v1
     - uses: foundry-rs/foundry-toolchain@v1
+    - uses: pontem-network/get-solc@master
+      with:
+        version: v0.8.15
     - name: Clear up some space
       run: |
         sudo rm -rf /usr/share/dotnet
