--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,7 +85,7 @@ prettyplease = "0.2.16"
 prometheus = "0.13.3"
 proc-macro-error = "1.0.4"
 proc-macro2 = "1.0"
-proptest = { version = "1.4.0", default-features = false }
+proptest = { version = "1.4.0", default-features = false, features = ["alloc"] }
 prost = "0.12.3"
 quote = "1.0"
 rand = { version = "0.8.5", default-features = false }
