--- a/Cargo.toml
+++ b/Cargo.toml
@@ -138,8 +138,10 @@ wasmer-middlewares = "=3.1.1"
 wasmer-vm = { version = "=3.1.1" }
 wasmparser = "0.101.1"
 wasmtime = "1.0"
+wasmtimer = "0.2.0"
 webassembly-test = "0.1.0"
 web-sys = "0.3.69"
+web-time = "1.1.0"
 wit-bindgen = "0.16.0"
 
 linera-base = { version = "0.11.0", path = "./linera-base" }
