--- a/linera-core/Cargo.toml
+++ b/linera-core/Cargo.toml
@@ -43,6 +43,7 @@ web = [
     "linera-execution/web",
     "linera-storage/web",
     "linera-views/web",
+    "wasmtimer",
 ]
 
 [dependencies]
@@ -74,6 +75,7 @@ tokio-stream.workspace = true
 tonic.workspace = true
 tracing.workspace = true
 trait-variant.workspace = true
+wasmtimer = { workspace = true, optional = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 linera-storage-service.workspace = true
