--- a/linera-base/Cargo.toml
+++ b/linera-base/Cargo.toml
@@ -20,6 +20,7 @@ anyhow.workspace = true
 async-graphql.workspace = true
 async-trait.workspace = true
 bcs.workspace = true
+cfg-if.workspace = true
 chrono.workspace = true
 ed25519-dalek.workspace = true
 generic-array.workspace = true
