--- a/linera-core/Cargo.toml
+++ b/linera-core/Cargo.toml
@@ -51,6 +51,7 @@ anyhow = { workspace = true, optional = true }
 async-graphql.workspace = true
 async-trait.workspace = true
 bcs.workspace = true
+cfg-if.workspace = true
 clap.workspace = true
 dashmap.workspace = true
 futures.workspace = true
