--- a/Cargo.toml
+++ b/Cargo.toml
@@ -133,9 +133,9 @@ trait-variant = "0.1.1"
 wasm-bindgen = "0.2.92"
 wasm-bindgen-test = "0.3.42"
 wasm-encoder = "0.24.1"
-wasmer = { version = "=3.1.1", features = ["singlepass"] }
-wasmer-middlewares = "=3.1.1"
-wasmer-vm = { version = "=3.1.1" }
+wasmer = { version = "4", features = ["singlepass"] }
+wasmer-middlewares = "4"
+wasmer-vm = { version = "4" }
 wasmparser = "0.101.1"
 wasmtime = "1.0"
 wasmtimer = "0.2.0"
