--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -42,6 +42,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: actions-rust-lang/setup-rust-toolchain@v1
+    - uses: foundry-rs/foundry-toolchain@v1
+    - uses: pontem-network/get-solc@master
+      with:
+        version: v0.8.25
     - name: Clear up some space
       run: |
         sudo rm -rf /usr/share/dotnet
