--- a/Cargo.toml
+++ b/Cargo.toml
@@ -141,9 +141,9 @@ url = "2.4"
 wasm-bindgen = "0.2.92"
 wasm-bindgen-test = "0.3.42"
 wasm-encoder = "0.24.1"
-wasmer = { version = "=3.1.1", features = ["singlepass"] }
-wasmer-middlewares = "=3.1.1"
-wasmer-vm = { version = "=3.1.1" }
+wasmer = { version = "4.2.8", features = ["singlepass"] }
+wasmer-middlewares = "4.2.8"
+wasmer-vm = { version = "4.2.8" }
 wasmparser = "0.101.1"
 wasmtime = "1.0"
 wasmtimer = "0.2.0"
