--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,6 +84,8 @@ insta = "1.36.1"
 log = "0.4.21"
 lru = "0.12.3"
 linked-hash-map = "0.5.6"
+num-bigint = "0.4.3"
+num-traits = "0.2.18"
 once_cell = "1.19.0"
 oneshot = "0.1.6"
 port-selector = "0.1.6"
