--- a/linera-ethereum/Cargo.toml
+++ b/linera-ethereum/Cargo.toml
@@ -18,6 +18,8 @@ ethers-middleware.workspace = true
 ethers-providers.workspace = true
 ethers-signers.workspace = true
 linera-storage-service.workspace = true
+num-bigint.workspace = true
+num-traits.workspace = true
 rustc-hex.workspace = true
 serde.workspace = true
 thiserror.workspace = true
