--- a/linera-service/template/contract.rs.template
+++ b/linera-service/template/contract.rs.template
@@ -26,7 +26,7 @@ impl Contract for ApplicationContract {{
     type State = Application;
     type Message = ();
     type Parameters = ();
-    type InitializationArgument = ();
+    type InstantiationArgument = ();
 
     async fn new(state: Self::State, runtime: ContractRuntime<Self>) -> Result<Self, Self::Error> {{
         Ok(ApplicationContract {{ state, runtime }})
@@ -36,9 +36,9 @@ impl Contract for ApplicationContract {{
         &mut self.state
     }}
 
-    async fn initialize(
+    async fn instantiate(
         &mut self,
-        _argument: Self::InitializationArgument,
+        _argument: Self::InstantiationArgument,
     ) -> Result<(), Self::Error> {{
         Ok(())
     }}
