--- a/Cargo.toml
+++ b/Cargo.toml
@@ -143,8 +143,8 @@ url = "2.4"
 wasm-bindgen = "0.2.92"
 wasm-bindgen-test = "0.3.42"
 wasm-encoder = "0.24.1"
+wasm-instrument = "0.4.0"
 wasmer = { version = "4.2.8", features = ["singlepass"] }
-wasmer-middlewares = "4.2.8"
 wasmparser = "0.101.1"
 wasmtime = "1.0"
 wasmtimer = "0.2.0"
@@ -197,9 +197,6 @@ max_combination_size = 1
 
 # Make sure to compile VMs with high optimization level
 [profile.dev.package.wasmer]
-opt-level = 3
-
-[profile.dev.package.wasmer-middlewares]
 opt-level = 3
 
 [profile.dev.package.wasmparser]
