--- a/linera-execution/Cargo.toml
+++ b/linera-execution/Cargo.toml
@@ -19,7 +19,7 @@ wasmer = [
     "dep:wasmer",
     "linera-witty/wasmer",
     "wasm-encoder",
-    "wasmer-middlewares",
+    "wasm-instrument",
     "wasmparser",
 ]
 wasmtime = [
@@ -57,8 +57,8 @@ serde_json.workspace = true
 thiserror.workspace = true
 tracing = { workspace = true, features = ["log"] }
 wasm-encoder = { workspace = true, optional = true }
+wasm-instrument = { workspace = true, optional = true }
 wasmer = { workspace = true, optional = true }
-wasmer-middlewares = { workspace = true, optional = true }
 wasmparser = { workspace = true, optional = true }
 wasmtime = { workspace = true, optional = true }
 
