--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -54,3 +54,15 @@ strip = 'debuginfo'
 
 [profile.bench]
 debug = true
+
+# Needed to compile Witty on `wasm32-unknown-unknown`.  See
+# https://github.com/wasmerio/wasmer/pull/4546
+[patch.crates-io.wasmer]
+version = "4.2.8"
+git = "https://github.com/wasmerio/wasmer"
+rev = "5800991767bc71a38dc4fc7e287cf451982a75a2"
+
+[patch.crates-io.wasmer-middlewares]
+version = "4.2.8"
+git = "https://github.com/wasmerio/wasmer"
+rev = "5800991767bc71a38dc4fc7e287cf451982a75a2"
