Remove serialization error variants from examples
They are not required any more.

--- a/linera-service/template/contract.rs.template
+++ b/linera-service/template/contract.rs.template
@@ -55,13 +55,5 @@ impl Contract for ApplicationContract {{
 /// An error that can occur during the contract execution.
 #[derive(Debug, Error)]
 pub enum ContractError {{
-    /// Failed to deserialize BCS bytes
-    #[error("Failed to deserialize BCS bytes")]
-    BcsError(#[from] bcs::Error),
-
-    /// Failed to deserialize JSON string
-    #[error("Failed to deserialize JSON string")]
-    JsonError(#[from] serde_json::Error),
-
-    // Add more error variants here.
+    // Add error variants here.
 }}
