Replace view system API stubs with `MemoryContext`
Use a fake `ViewStorageContext` that wraps a `MemoryContext` for tests.

--- a/linera-sdk/Cargo.toml
+++ b/linera-sdk/Cargo.toml
@@ -30,10 +30,11 @@ wasmtime = [
     "linera-storage/wasmtime",
     "linera-witty/wasmtime",
 ]
-test = ["linera-base/test"]
+test = ["async-trait", "linera-base/test"]
 
 [dependencies]
 async-graphql.workspace = true
+async-trait = { workspace = true, optional = true }
 bcs.workspace = true
 futures.workspace = true
 linera-base.workspace = true
