Remove `Result` return types from applications (#1969)
* Panic in `contract!` instead of returning an error

Prepare to remove the error types.

* Panic in `service!` instead of returning an error

Prepare to remove the error types.

* Remove error conversion constraints

They are not needed anymore since the code will panic instead.

* Remove serialization error variants from examples

They are not required any more.

* Comment out unit test that asserts error

Prepare to replace returning the error with panicking, which can't be
tested yet.

* Don't return errors from Counter application

Replace errors with panics.

* Don't return errors from MetaCounter application

Replace errors with panics.

* Don't return errors from Fungible Token app.

Replace errors with panics.

* Don't return errors from Native Fungible Token app

Replace errors with panics.

* Don't return errors from Non-Fungible Token app.

Replace errors with panics.

* Don't return errors from Crowd Funding application

Replace errors with panics.

* Don't return errors from Social application

Replace errors with panics.

* Don't return errors from LLM application

Replace errors with panics.

* Don't return errors from Matching Engine app.

Replace errors with panics.

* Don't return errors from AMM application

Replace errors with panics.

* Remove `Contract::Error` associated type

Contracts should now `panic!` instead of returning an error.

* Remove `Service::Error` associated types

Services should now `panic!` instead of returning an error.

* Remove error strings from WIT entrypoints

The applications should now panic instead.

* Remove `thiserror` dependency from examples

They don't need to create custom error types anymore.

* Update Wasm fuel consumption test fixtures

And update the expected fuel consumption values.

* Workaround unused dependencies lint

Should be fixed separately.

--- a/examples/llm/Cargo.toml
+++ b/examples/llm/Cargo.toml
@@ -14,7 +14,6 @@ log.workspace = true
 rand.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-thiserror.workspace = true
 tokenizers.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
@@ -23,6 +22,10 @@ tokio = { workspace = true, features = ["rt", "sync"] }
 
 [dev-dependencies]
 webassembly-test.workspace = true
+
+# TODO(#1970): Remove once macros don't depend on them
+[package.metadata.cargo-machete]
+ignored = ["bcs", "serde_json"]
 
 [[bin]]
 name = "llm_contract"
