--- a/examples/social/Cargo.toml
+++ b/examples/social/Cargo.toml
@@ -10,7 +10,6 @@ bcs.workspace = true
 linera-sdk.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-thiserror.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 linera-sdk = { workspace = true, features = ["test", "wasmer"] }
@@ -18,6 +17,10 @@ tokio = { workspace = true, features = ["rt", "sync"] }
 
 [dev-dependencies]
 webassembly-test.workspace = true
+
+# TODO(#1970): Remove once macros don't depend on them
+[package.metadata.cargo-machete]
+ignored = ["serde_json"]
 
 [[bin]]
 name = "social_contract"
