--- a/examples/meta-counter/Cargo.toml
+++ b/examples/meta-counter/Cargo.toml
@@ -12,11 +12,14 @@ linera-sdk.workspace = true
 log.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-thiserror.workspace = true
 
 [dev-dependencies]
 linera-sdk = { workspace = true, features = ["test"] }
 webassembly-test.workspace = true
+
+# TODO(#1970): Remove once macros don't depend on them
+[package.metadata.cargo-machete]
+ignored = ["bcs", "serde_json"]
 
 [[bin]]
 name = "meta_counter_contract"
