--- a/examples/native-fungible/Cargo.toml
+++ b/examples/native-fungible/Cargo.toml
@@ -14,12 +14,15 @@ fungible.workspace = true
 linera-sdk.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-thiserror.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 native-fungible = { workspace = true, features = ["test"] }
 linera-sdk = { workspace = true, features = ["test", "wasmer"] }
 tokio = { workspace = true }
+
+# TODO(#1970): Remove once macros don't depend on them
+[package.metadata.cargo-machete]
+ignored = ["bcs", "serde_json"]
 
 [[bin]]
 name = "native_fungible_contract"
