--- a/examples/non-fungible/Cargo.toml
+++ b/examples/non-fungible/Cargo.toml
@@ -16,13 +16,16 @@ linera-sdk.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 sha3.workspace = true
-thiserror.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 fungible = { workspace = true, features = ["test"] }
 non-fungible = { workspace = true, features = ["test"] }
 linera-sdk = { workspace = true, features = ["test", "wasmer"] }
 tokio.workspace = true
+
+# TODO(#1970): Remove once macros don't depend on them
+[package.metadata.cargo-machete]
+ignored = ["serde_json"]
 
 [[bin]]
 name = "non_fungible_contract"
