Remove test runner and the mock system API (#1974)
* Use `with_testing` in `linera-sdk`

Replace usages of `feature = "test"` with the alias.

* Replace view system API stubs with `MemoryContext`

Use a fake `ViewStorageContext` that wraps a `MemoryContext` for tests.

* Stub a test version of `ContractRuntime`

Prepare to mock the functionality of the contract runtime.

* Mock `ContractRuntime::application_parameters`

Allow configuring it either at construction time or later.

* Mock `ContractRuntime::application_id`

Allow configuring it either at construction time or later.

* Mock `ContractRuntime::chain_id`

Allow configuring it either at construction time or later.

* Mock `ContractRuntime::authenticated_signer`

Allow configuring it either at construction time or later.

* Mock `ContractRuntime::block_height`

Allow configuring it either at construction time or later.

* Mock `ContractRuntime::message_id`

Allow configuring it either at construction time or later.

* Mock `ContractRuntime::message_is_bouncing`

Allow configuring it either at construction time or later.

* Mock `ContractRuntime::authenticated_caller_id`

Allow configuring it either at construction time or later.

* Mock `ContractRuntime::system_time`

Allow configuring it either at construction time or later.

* Mock `ContractRuntime::chain_balance`

Allow configuring it either at construction time or later.

* Mock `ContractRuntime::owner_balance`

Allow configuring it either at construction time or later, and
configuring all owners at once or one at a time.

* Mock `ContractRuntime::prepare_message`

Change the `MessageBuilder` to add the `SendMessageRequest` to a queue
that can be inspected by the test afterwards.

* Mock `ContractRuntime::subscribe`

Collect subscribe requests into a queue which can be inspected by the
test afterwards.

* Mock `ContractRuntime::unsubscribe`

Collect unsubscribe requests into a queue whic

--- a/linera-sdk/Cargo.toml
+++ b/linera-sdk/Cargo.toml
@@ -30,15 +30,15 @@ wasmtime = [
     "linera-storage/wasmtime",
     "linera-witty/wasmtime",
 ]
-test = ["linera-base/test"]
+test = ["async-trait", "linera-base/test"]
 
 [dependencies]
 async-graphql.workspace = true
+async-trait = { workspace = true, optional = true }
 bcs.workspace = true
 futures.workspace = true
 linera-base.workspace = true
 linera-sdk-derive.workspace = true
-linera-version.workspace = true
 linera-views.workspace = true
 log.workspace = true
 serde.workspace = true
@@ -70,8 +70,3 @@ tokio-test.workspace = true
 [[bin]]
 name = "wit-generator"
 path = "src/bin/wit_generator.rs"
-
-[[bin]]
-name = "linera-wasm-test-runner"
-path = "src/bin/linera-wasm-test-runner.rs"
-required-features = ["wasmtime"]
