--- a/linera-base/Cargo.toml
+++ b/linera-base/Cargo.toml
@@ -19,6 +19,7 @@ web = ["getrandom/js", "rand/getrandom", "rand/std", "rand/std_rng", "web-time"]
 anyhow.workspace = true
 async-graphql.workspace = true
 async-trait.workspace = true
+base64.workspace = true
 bcs.workspace = true
 cfg-if.workspace = true
 chrono.workspace = true
