Created gen-nft example app from non-fungible example app

--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "crowd-funding",
     "ethereum-tracker",
     "fungible",
+    "gen-nft",
     "hex-game",
     "llm",
     "matching-engine",
